--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -13,8 +13,8 @@ builds:
       - amd64
       - arm64
     ignore:
-      - goos=windows
-        goarch=arm64
+      - goos: windows
+        goarch: arm64
     ldflags:
       - -s -w -X 'main.forceColors=true'
     binary: uno
